--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <i class="fas fa-hamburger"></i> ABURG
             </h1>
         </header>
-        <form class="login">
+        <form class="login" onsubmit='goToStore(event)'>
             <h1>Login</h1>
 
             <div class="input-block">
@@ -34,7 +34,7 @@
                 <input type="text" id="password"/>
             </div>
 
-            <button class="primary w-full">Entrar</button>
+            <button class="primary w-full"  type="submit">Entrar</button>
 
             <div class="bottom-auth">
                 <h1>ou entre com</h1>
@@ -45,5 +45,12 @@
             </div>
         </form>
     </main>
+
+    <script>
+        function goToStore(event){
+            event.preventDefault()
+            window.location.href = "http://127.0.0.1:5500/store.html";
+        }
+    </script>
 </body>
 </html>
