--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css"/>
     <link href="node_modules/@fortawesome/fontawesome-free/js/all.js"/>
 
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="styles/login.css">
     <title>Document</title>
 </head>
 <body>
@@ -49,7 +49,7 @@
     <script>
         function goToStore(event){
             event.preventDefault()
-            window.location.href = "http://127.0.0.1:5500/store.html";
+            window.location.href = "http://127.0.0.1:5500/pages/store.html";
         }
     </script>
 </body>
