--- a/pages/store.html
+++ b/pages/store.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css"/>
-    <link href="node_modules/@fortawesome/fontawesome-free/js/all.js"/>
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css"/>
+    <link href="../node_modules/@fortawesome/fontawesome-free/js/all.js"/>
 
-    <link rel="stylesheet" href="store.css">
+    <link rel="stylesheet" href="../styles/store.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         <header>
-            <nav id="nav-toggler">
-                <h2>
-                    <i class="fas fa-hamburger"></i> ABURG
-                </h2>               
-                <h2 class="mobile-only">
+            <nav>
+                <a href="pages/store.html" class="clear-link">
+                    <h2>
+                        <i class="fas fa-hamburger"></i> ABURG
+                    </h2>    
+                </a>               
+                <h2 class="mobile-only" id="nav-toggler">
                     <i class="fas fa-bars"></i>
                 </h2>
                 <ul class="desktop-only">
@@ -40,7 +42,7 @@
             </nav>
             <section class="hero">
                 <figure class="img-wrapper">
-                    <img src="images/header.jfif"/>
+                    <img src="../images/header.jfif"/>
                 </figure>
             </section>
         </header>
@@ -55,7 +57,7 @@
             <div class="row">
                 <div class="product-card">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -63,12 +65,12 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full"><i class="fas fa-shopping-cart"></i> ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)"><i class="fas fa-shopping-cart"></i> ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -76,12 +78,12 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -89,12 +91,12 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -102,12 +104,12 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
                 <div class="product-card">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -115,7 +117,7 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
             </div>
@@ -126,7 +128,7 @@
                 <div class="row">
                     <div class="product-card">
                         <div class="wrapper">
-                            <img src="images/amburg.jpg" class="image"/>
+                            <img src="../images/amburg.jpg" class="image"/>
                         </div>
                         <div class="info">
                             <div>
@@ -134,12 +136,12 @@
                                 <h2>R$ 15.00</h2>
                             </div>
                             <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                            <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                            <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                         </div>
                     </div>
                     <div class="product-card">
                         <div class="wrapper">
-                            <img src="images/amburg.jpg" class="image"/>
+                            <img src="../images/amburg.jpg" class="image"/>
                         </div>
                         <div class="info">
                             <div>
@@ -147,12 +149,12 @@
                                 <h2>R$ 15.00</h2>
                             </div>
                             <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                            <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                            <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                         </div>
                     </div>
                     <div class="product-card">
                         <div class="wrapper">
-                            <img src="images/amburg.jpg" class="image"/>
+                            <img src="../images/amburg.jpg" class="image"/>
                         </div>
                         <div class="info">
                             <div>
@@ -160,7 +162,7 @@
                                 <h2>R$ 15.00</h2>
                             </div>
                             <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                            <button class="primary w-full">ADICIONAR AO CARRINHO</button>
+                            <button class="primary w-full" onclick="addItem(this)">ADICIONAR AO CARRINHO</button>
                         </div>
                     </div>
                 </div>
@@ -177,7 +179,7 @@
     <div class="buy-footer">
         <div>
             <h1>Total: <strong>R$ 27.00</strong></h1>
-            <div class="icon">
+            <div class="icon" onclick="window.location.href = 'localhost:5500/checkout.html'">
                 <i class="fas fa-shopping-cart"></i>
             </div>
         </div>
@@ -187,11 +189,13 @@
 
     </footer>
 
+    <script src="../scripts/nav.js"></script>
+
     <script>
         const product = `
                 <div class="product-card small">
                     <div class="wrapper">
-                        <img src="images/amburg.jpg" class="image"/>
+                        <img src="../images/amburg.jpg" class="image"/>
                     </div>
                     <div class="info">
                         <div>
@@ -199,27 +203,47 @@
                             <h2>R$ 15.00</h2>
                         </div>
                         <p>Cebola alho, tal coisa, tal coisa, tal coisa</p>
-                        <button class="primary w-full"><i class="fas fa-shopping-cart"></i> ADICIONAR AO CARRINHO</button>
+                        <button class="primary w-full" onclick="addItem(this)"><i class="fas fa-shopping-cart"></i> ADICIONAR AO CARRINHO</button>
                     </div>
                 </div>
         `
     </script>
     <script>
-        const toggler = document.querySelector("#nav-toggler");
-        const navMobile = document.querySelector(".mobile-menu");
-
-        toggler.onclick = () => {
-            if (navMobile.classList.contains('active')) navMobile.classList.remove('active')
-            else navMobile.classList.add('active')
-        };
-
         const allProducts = document.querySelector("#all-products");
         for (let i = 0; i < 15; i++){
             allProducts.innerHTML = allProducts.innerHTML+product
         };
+    </script>
+    <script>
+        var qtd_itens = 0;
+        const buyFooter = document.querySelector(".buy-footer");
 
+        function toggleFooter(){
+            if (qtd_itens <= 0)
+              buyFooter.classList.remove("active")
+            else
+              buyFooter.classList.add("active")
+        }
 
+        function addItem(element){
+            element.classList.add("secundary")
+            element.classList.remove("primary")
+            element.innerHTML = `<i class="fas fa-trash"></i> REMOVER DO CARRINHO`
 
+            element.onclick = () => removeItem(element)
+            qtd_itens+=1;
+            toggleFooter();
+        }
+
+        function removeItem(element){
+            element.classList.add("primary")
+            element.classList.remove("secundary")
+            element.innerHTML = `<i class="fas fa-shopping-cart"></i> ADICIONAR AO CARRINHO`
+
+            element.onclick = () => addItem(element)
+            qtd_itens-=1;
+            toggleFooter();
+        }
 
     </script>
 </body>
