--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -52,9 +52,9 @@
                         <h2>R$ 15.00</h2>
                         <p>Coisa coisa coisa coisa</p>
                         <div class="selector">
-                            <button class="primary">-</button>
-                            <input/>
-                            <button class="primary">+</button>
+                            <button class="primary down">-</button>
+                            <input value="1"/>
+                            <button class="primary up">+</button>
                         </div>
                     </div>
                 </div>
@@ -67,9 +67,9 @@
                         <h2>R$ 15.00</h2>
                         <p>Coisa coisa coisa coisa</p>
                         <div class="selector">
-                            <button class="primary">-</button>
-                            <input/>
-                            <button class="primary">+</button>
+                            <button class="primary down">-</button>
+                            <input value="1"/>
+                            <button class="primary up">+</button>
                         </div>
                     </div>
                 </div>
@@ -82,19 +82,18 @@
                         <h2>R$ 15.00</h2>
                         <p>Coisa coisa coisa coisa</p>
                         <div class="selector">
-                            <button class="primary">-</button>
-                            <input/>
-                            <button class="primary">+</button>
+                            <button class="primary down">-</button>
+                            <input value="1"/>
+                            <button class="primary up">+</button>
                         </div>
                     </div>
                 </div>
-
-                <div class="bottom-info">
-                    <p><strong>Subtotal:</strong> R$ 15.00</p>
-                    <p><strong>Frete:</strong> R$ 15.00</p>
-                    <p><strong>Total:</strong> R$ 15.00</p>
-                    <button class="primary w-full">Checkout</button>
-                </div>
+            </div>
+            <div class="bottom-info">
+                <p><strong>Subtotal:</strong> R$ 15.00</p>
+                <p><strong>Frete:</strong> R$ 0.00</p>
+                <p><strong>Total:</strong> R$ 15.00</p>
+                <button class="primary w-full">Checkout</button>
             </div>
         </section>
     <footer>
@@ -102,5 +101,30 @@
     </footer>
 
     <script src="../scripts/nav.js"></script>
+    <script>
+        const cards = document.querySelectorAll(".card-checkout");
+
+        cards.forEach(card => {
+            const up = card.querySelector(".up")
+            const down = card.querySelector(".down")
+            const text = card.querySelector("input")
+
+            up.onclick = () => {
+                text.value = Number(text.value) + 1
+            }
+            down.onclick = () => {
+                const actual = Number(text.value)
+
+                if (actual > 1){
+                    text.value = Number(text.value) - 1
+                    return
+                }
+                
+                const remove = confirm("Deseja remover do carrinho?")
+                if (remove)
+                    card.remove()
+            }
+        })
+    </script>
 </body>
 </html>
