--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
             <div class="input-block">
                 <label for="username">Username</label>
-                <input type="text" id="username"/>
+                <input type="text" id="username" name="username"/>
             </div>
             <div class="input-block">
                 <label for="password">Password</label>
-                <input type="text" id="password"/>
+                <input type="password" id="password" name="password"/>
             </div>
 
             <button class="primary w-full"  type="submit">Entrar</button>
@@ -45,11 +45,26 @@
             </div>
         </form>
     </main>
+    <footer>
+        <section class="top">
+            <div class="social">
+                <a class="clear-link" href="#"><i class="fab fa-facebook-square"></i></a>
+                <a class="clear-link" href="#"><i class="fab fa-instagram-square"></i></a>
+                <a class="clear-link" href="#"><i class="fab fa-whatsapp-square"></i></a>
+            </div>
+        </section>
+        <section class="bottom">
+            @ AMBURG 2021
+        </section>
+    </footer>
 
     <script>
         function goToStore(event){
+            const formData = new FormData(event.target);
+            const formProps = Object.fromEntries(formData);
+            sessionStorage.setItem('username', formProps.username)
             event.preventDefault()
-            window.location.href = "http://127.0.0.1:5500/pages/store.html";
+            window.location.href = `http://127.0.0.1:5500/pages/store.html`;
         }
     </script>
 </body>
